--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,6 +107,10 @@ input {
   font-weight: 700;
 }
 
+.ui.cards {
+  justify-content: center;
+}
+
  .ui.card:hover {
     transform: scale(1.02);
     transition-delay: .4s ease-in-out;
@@ -124,6 +128,11 @@ input {
   border-radius: 5px;
 }
 
+
+#createDeck {
+  width: 100%;
+}
+
 #decks__div {
   padding-top: 7rem;
   padding-bottom: 4rem;
@@ -139,7 +148,7 @@ input {
 }
 
 #quicksearch {
-  margin-top: 2.5rem;
+  margin-top: .3rem;
 }
 
 #side1 {
@@ -156,8 +165,9 @@ input {
 }
 
 #singleDeck__container {
-  margin-right: -2rem;
+  width: 25%;
 }
+
 
 
 #signup {
